# ml-image-scraping-tool

./: .gitignore  Makefile  README.md
airflow/: .gitignore  (+2 more)
beam_pipelines/: .env.test  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  to_tfrecord.Dockerfile  upload_csv_labels.Dockerfile
beam_pipelines/examples/: __main__.py
beam_pipelines/image_processing/: __main__.py
beam_pipelines/pipelines/sample/: __main__.py
beam_pipelines/pipelines/to_tfrecord/: __main__.py  image_dofns.py
beam_pipelines/pipelines/upload_csv_labels/: Dockerfile  __main__.py
beam_pipelines/tests/: test_to_tfrecord_pipeline.py  test_useless.py
beam_pipelines/to_tfrecord/: __main__.py  image_dofns.py
beam_pipelines/upload_csv_labels/: __main__.py
image_scraper/: .gitignore  Dockerfile  README.md  base.Dockerfile  cloudrun.Dockerfile  docker-compose.yaml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  scrapy.cfg  scrapyd.Dockerfile  scrapyd_deploy.Dockerfile  setup.py
image_scraper/image_scraper/: items.py  middlewares.py  pipelines.py  settings.py
image_scraper/image_scraper/events/: publish.py
image_scraper/image_scraper/kafka/: producer.py
image_scraper/image_scraper/spiders/: images_spider.py
image_scraper/kafka/: producer.py
image_scraper/tests/: test_example.py  test_images_spider.py  test_kafka_producer.py  test_selenium_middleware.py  test_url_images_pipeline.py
labelapp/auth_app/: Cargo.toml  README.md  pyproject.toml
labelapp/auth_app/app/: db.py  deps.py  init_db.py  main.py  models.py  schemas.py  security.py
labelapp/dag_info/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
labelapp/dag_info/dag_info/: actions.py  db.py  main.py  models.py  schemas.py
labelapp/dag_info/tests/: test_get_dag_info.py  test_get_info.py
labelapp/labeling_app/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
labelapp/labeling_app/app/: __init__.py  main.py  models.py  security.py
labelapp/labeling_app/app/api/: deps.py
labelapp/labeling_app/app/core/: config.py  uploader.py
labelapp/labeling_app/app/crud/: __init__.py  base.py  crud_project.py  crud_user.py
labelapp/labeling_app/app/db/: engine.py  init_db.py
labelapp/labeling_app/app/exceptions/: projects.py  users.py
labelapp/labeling_app/app/models/: __init__.py  extras.py  projects.py  urls.py  users.py
labelapp/labeling_app/app/schemas/: extras.py  projects.py  read.py  token.py  urls.py  users.py
labelapp/labeling_app/app/security/: auth.py
labelapp/labeling_app/tests/: test_auth.py  test_projects.py  test_urls.py
labelapp/url_app/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
labelapp/url_app/integration_test/: produce_kafka_messages.py  setup.py  setup.sh  test.sh  test_assertion.py  test_url_app.py
labelapp/url_app/src/: main.py  utils.py
labelapp/url_app/src/db/: database.py  db.py  db_operations.py  listeners.py  models.py
labelapp/url_app/src/kafka/: consumer.py
labelapp/url_app/src/url_dist/: __init__.py  consistent_hashing.py  virtual_nodes.py
labelapp/url_app/tests/: test_consistent_hashing.py  test_db_operations.py  test_kafka_consumer.py
labelapp/url_app/url_app/: main.py  url_handler.py
labelapp/url_app/url_app/db/: db_operations.py  models.py  session.py
labelapp/url_app/url_app/events/: subscribe.py
labelapp/url_app/url_app/kafka/: consumer.py
labelapp/url_app/url_app/url_dist/: consistent_hashing.py  virtual_nodes.py
(+36 files in other folders)
