[tool.poetry]
name = "beam-pipelines"
version = "0.1.0"
description = ""
authors = ["sadelcarpio <sadelcarpioa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
tensorflow-io-gcs-filesystem = "0.31.0"
apache-beam = {version = ">=2.51.0,<2.52.0", extras = ["gcp"]}
pillow = ">=10.0.1,<10.1.0"
tensorflow = ">=2.15.0,<2.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
