[tool.poetry]
name = "labeling-app"
version = "0.1.0"
description = ""
authors = ["sadelcarpio <sadelcarpioa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
sqlmodel = "^0.0.14"
pg8000 = "^1.30.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
