[tool.poetry]
name = "url-app"
version = "0.1.0"
description = ""
authors = ["sadelcarpio <sadelcarpioa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
confluent-kafka = ">=2.3.0,<2.4.0"
cloud-sql-python-connector = ">=1.4.3,<1.5.0"
sqlalchemy = ">=2.0.23,<2.1.0"
pg8000 = ">=1.30.3,<1.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
